exports[`GridMoveHistory CLEAR_SUCCESS action 1`] = `
Object {
  "data": Array [],
  "loaded": false,
  "loading": false
}
`;

exports[`GridMoveHistory Move history: fail action 1`] = `
Object {
  "data": [Error: Some error to load history data.],
  "loaded": true,
  "loading": false
}
`;

exports[`GridMoveHistory Move history: initial action 1`] = `
Object {
  "data": Array [],
  "loaded": false,
  "loading": true
}
`;

exports[`GridMoveHistory Move history: no action 1`] = `
Object {
  "data": Array []
}
`;

exports[`GridMoveHistory Move history: success action 1`] = `
Object {
  "data": Array [
    Object {
      "from": Object {
        "id": 4,
        "name": "Test 2",
        "path": ",1,2,4,",
        "pathNames": Array [
          Object {
            "name": "Museum 1",
            "nodeId": 1
          },
          Object {
            "name": "Building 1",
            "nodeId": 2
          },
          Object {
            "name": "Room 4",
            "nodeId": 4
          }
        ]
      },
      "to": Object {
        "id": 3,
        "name": "Test 1",
        "path": ",1,2,3,",
        "pathNames": Array [
          Object {
            "name": "Museum 1",
            "nodeId": 1
          },
          Object {
            "name": "Building 1",
            "nodeId": 2
          },
          Object {
            "name": "Room 1",
            "nodeId": 3
          }
        ]
      }
    }
  ],
  "loaded": true,
  "loading": false
}
`;

exports[`GridMoveHistory creates LOAD_SUCCESS when fetching data has been done 1`] = `
Array [
  Object {
    "type": "musit/movehistory/LOAD"
  },
  Object {
    "result": Array [
      Object {
        "doneDate": "2016-10-06T00:00:00+00:00",
        "from": Object {
          "breadcrumb": Array [
            Object {
              "id": 1,
              "name": "root-node",
              "url": "/magasin/1"
            },
            Object {
              "id": 2,
              "name": "Utviklingsmuseet",
              "url": "/magasin/2"
            },
            Object {
              "id": 3,
              "name": "Forskningens hus",
              "url": "/magasin/3"
            },
            Object {
              "id": 6,
              "name": "Forskningsværelset",
              "url": "/magasin/6"
            },
            Object {
              "id": 7,
              "name": "Foo",
              "url": "/magasin/7"
            }
          ],
          "path": ",1,2,3,6,7,",
          "pathNames": Array [
            Object {
              "name": "root-node",
              "nodeId": 1
            },
            Object {
              "name": "Utviklingsmuseet",
              "nodeId": 2
            },
            Object {
              "name": "Forskningens hus",
              "nodeId": 3
            },
            Object {
              "name": "Forskningsværelset",
              "nodeId": 6
            },
            Object {
              "name": "Foo",
              "nodeId": 7
            }
          ]
        },
        "registeredBy": "00000000-0000-0000-0000-000000000000",
        "registeredDate": "2016-10-06T05:55:52+00:00",
        "to": Object {
          "breadcrumb": Array [
            Object {
              "id": 1,
              "name": "root-node",
              "url": "/magasin/1"
            },
            Object {
              "id": 2,
              "name": "Utviklingsmuseet",
              "url": "/magasin/2"
            },
            Object {
              "id": 3,
              "name": "Forskningens hus",
              "url": "/magasin/3"
            },
            Object {
              "id": 6,
              "name": "Forskningsværelset",
              "url": "/magasin/6"
            }
          ],
          "path": ",1,2,3,6,",
          "pathNames": Array [
            Object {
              "name": "root-node",
              "nodeId": 1
            },
            Object {
              "name": "Utviklingsmuseet",
              "nodeId": 2
            },
            Object {
              "name": "Forskningens hus",
              "nodeId": 3
            },
            Object {
              "name": "Forskningsværelset",
              "nodeId": 6
            }
          ]
        }
      },
      Object {
        "doneBy": "ee8d5b67-d173-46b2-9918-e06a9729825f",
        "doneDate": "2016-10-06T00:00:00+00:00",
        "from": Object {
          "breadcrumb": Array [
            Object {
              "id": 1,
              "name": "root-node",
              "url": "/magasin/1"
            },
            Object {
              "id": 2,
              "name": "Utviklingsmuseet",
              "url": "/magasin/2"
            },
            Object {
              "id": 3,
              "name": "Forskningens hus",
              "url": "/magasin/3"
            },
            Object {
              "id": 6,
              "name": "Forskningsværelset",
              "url": "/magasin/6"
            },
            Object {
              "id": 7,
              "name": "Foo",
              "url": "/magasin/7"
            }
          ],
          "path": ",1,2,3,6,7,",
          "pathNames": Array [
            Object {
              "name": "root-node",
              "nodeId": 1
            },
            Object {
              "name": "Utviklingsmuseet",
              "nodeId": 2
            },
            Object {
              "name": "Forskningens hus",
              "nodeId": 3
            },
            Object {
              "name": "Forskningsværelset",
              "nodeId": 6
            },
            Object {
              "name": "Foo",
              "nodeId": 7
            }
          ]
        },
        "registeredBy": "00000000-0000-0000-0000-000000000000",
        "registeredDate": "2016-10-06T05:55:52+00:00",
        "to": Object {
          "breadcrumb": Array [
            Object {
              "id": 1,
              "name": "root-node",
              "url": "/magasin/1"
            },
            Object {
              "id": 2,
              "name": "Utviklingsmuseet",
              "url": "/magasin/2"
            },
            Object {
              "id": 3,
              "name": "Forskningens hus",
              "url": "/magasin/3"
            },
            Object {
              "id": 6,
              "name": "Forskningsværelset",
              "url": "/magasin/6"
            }
          ],
          "path": ",1,2,3,6,",
          "pathNames": Array [
            Object {
              "name": "root-node",
              "nodeId": 1
            },
            Object {
              "name": "Utviklingsmuseet",
              "nodeId": 2
            },
            Object {
              "name": "Forskningens hus",
              "nodeId": 3
            },
            Object {
              "name": "Forskningsværelset",
              "nodeId": 6
            }
          ]
        }
      }
    ],
    "type": "musit/movehistory/LOAD_SUCCESS"
  }
]
`;
